Adding first AND last names

--- a/Practice-Activity-6.qmd
+++ b/Practice-Activity-6.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Practice Activity 6"
+author: "Adam Del Rio, Nick Patrick, Ruben Jimenez, Dillon Murphy"
 format: html
 editor: visual
 self-contatined: true
